feat: programation march and april

--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -115,6 +115,23 @@
 			<div class="fh5co-post">
 				<div class="fh5co-entry padding">
 					<div class="anuncios">
+						<h3><a name="congresso"><strong>Anúncio Sobre a Reunião com os Pioneiros Regulares de
+									Circuito</strong></a>
+						</h3>
+						<p>Prezados irmãos,</p>
+						<p style="padding-left: 40px;">Temos o prazer de informá-los que a nossa próxima Pré-Assembleia,
+							"Reunião com os Pioneiros Regulares" do Circuito será...
+							<em>no domingo,</em><strong> 09 de março de 2025.</strong>
+						</p>
+						<p>Local: Salão do Reino da Congregação Eucalipto, Simões Filho - <strong>Das 08:30h às
+								11:45h</strong></p>
+					</div>
+				</div>
+			</div>
+
+			<div class="fh5co-post">
+				<div class="fh5co-entry padding">
+					<div class="anuncios">
 						<h3><a name="visita"><strong>Anúncio Sobre a Visita do Superintendente de Circuito</strong></a>
 						</h3>
 						<p>Prezados irmãos,</p>
@@ -123,21 +140,6 @@
 							<em>Data da visita:</em><strong> 18 - 23 de Março de 2025.</strong>
 						</p>
 						<p>Casal Substituto - <strong>Edson e Manu</strong></p>
-					</div>
-				</div>
-			</div>
-
-			<div class="fh5co-post">
-				<div class="fh5co-entry padding">
-					<div class="anuncios">
-						<h3><a name="reuniao_especial"><strong>Anúncio Sobre a Reunião Especial</strong></a>
-						</h3>
-						<p>Prezados irmãos,</p>
-						<p style="padding-left: 40px;">Temos o prazer de informá-los que haverá uma reunião especial
-							transmitida ao vivo para todas as congregações do país <em>no</em>
-							<strong> Sábado, 15 de Fevereiro de 2025.</strong>
-						</p>
-						<p>O horário será informado mais a frente.</p>
 					</div>
 				</div>
 			</div>
