--- a/pages/servicos.html
+++ b/pages/servicos.html
@@ -236,7 +236,7 @@
                     </h2>
 
                     <h4 style="text-align: center; color: black">
-                        <strong>Primeira Semana de Cada Mês</strong>
+                        <strong>De 06/03 até 09/03</strong>
                     </h4>
                     <div>
                         <img src="../assets/images/data/carrinho1.png" alt="Semana 1 do Mês Atual" width="100%"
@@ -244,7 +244,7 @@
                     </div>
 
                     <h4 style="text-align: center; color: black">
-                        <strong>Segunda Semana de Cada Mês</strong>
+                        <strong>De 10/03 até 16/03</strong>
                     </h4>
                     <div>
                         <img src="../assets/images/data/carrinho2.png" alt="Semana 2 do Mês Atual" width="100%"
@@ -252,7 +252,7 @@
                     </div>
 
                     <h4 style="text-align: center; color: black">
-                        <strong>Terceira Semana de Cada Mês</strong>
+                        <strong>De 17/03 até 23/03</strong>
                     </h4>
                     <div>
                         <img src="../assets/images/data/carrinho3.png" alt="Semana 3 do Mês Atual" width="100%"
@@ -260,7 +260,41 @@
                     </div>
 
                     <h4 style="text-align: center; color: black">
-                        <strong>Quarta Semana de Cada Mês</strong>
+                        <strong>De 24/03 até 30/03</strong>
+                    </h4>
+                    <div>
+                        <img src="../assets/images/data/carrinho4.png" alt="Semana 4 do Mês Atual" width="100%"
+                            height="100%" />
+                    </div>
+
+
+                    <!--  -->
+                    <h4 style="text-align: center; color: black">
+                        <strong>De 31/03 até 06/04</strong>
+                    </h4>
+                    <div>
+                        <img src="../assets/images/data/carrinho1.png" alt="Semana 1 do Mês Atual" width="100%"
+                            height="100%" />
+                    </div>
+
+                    <h4 style="text-align: center; color: black">
+                        <strong>De 07/04 até 13/04</strong>
+                    </h4>
+                    <div>
+                        <img src="../assets/images/data/carrinho2.png" alt="Semana 2 do Mês Atual" width="100%"
+                            height="100%" />
+                    </div>
+
+                    <h4 style="text-align: center; color: black">
+                        <strong>De 14/04 até 20/04</strong>
+                    </h4>
+                    <div>
+                        <img src="../assets/images/data/carrinho3.png" alt="Semana 3 do Mês Atual" width="100%"
+                            height="100%" />
+                    </div>
+
+                    <h4 style="text-align: center; color: black">
+                        <strong>De 21/04 até 27/04</strong>
                     </h4>
                     <div>
                         <img src="../assets/images/data/carrinho4.png" alt="Semana 4 do Mês Atual" width="100%"
