--- a/pages/vida_ministerio.html
+++ b/pages/vida_ministerio.html
@@ -106,56 +106,56 @@
 
                 <div class="fh5co-entry padding">
                     <h1 style="text-align: center; color: black">
-                        <strong>Programação Mês de Janeiro de 2025</strong>
+                        <strong>Programação Mês de Março de 2025</strong>
                     </h1>
                     <div>
-                        <img src="../assets/images/data/vm_02-01-2025.jpeg"
-                            alt="Reunião Vida e Ministério 02 de Janeiro de 2025" width="100%" height="100%" />
+                        <img src="../assets/images/data/vm_13-03-2025.jpeg"
+                            alt="Reunião Vida e Ministério 13 de Março de 2025" width="100%" height="100%" />
                     </div>
 
                     <div>
-                        <img src="../assets/images/data/vm_09-01-2025.jpeg"
-                            alt="Reunião Vida e Ministério 09 de Janeiro de 2025" width="100%" height="100%" />
+                        <img src="../assets/images/data/vm_20-03-2025.jpeg"
+                            alt="Reunião Vida e Ministério 20 de Março de 2025" width="100%" height="100%" />
                     </div>
 
                     <div>
-                        <img src="../assets/images/data/vm_16-01-2025.jpeg"
-                            alt="Reunião Vida e Ministério 16 de Janeiro de 2025" width="100%" height="100%" />
-                    </div>
-
-                    <div>
-                        <img src="../assets/images/data/vm_23-01-2025.jpeg"
-                            alt="Reunião Vida e Ministério 23 de Janeiro de 2025" width="100%" height="100%" />
-                    </div>
-
-                    <div>
-                        <img src="../assets/images/data/vm_30-01-2025.jpeg"
-                            alt="Reunião Vida e Ministério 30 de Janeiro de 2025" width="100%" height="100%" />
+                        <img src="../assets/images/data/vm_27-03-2025.jpeg"
+                            alt="Reunião Vida e Ministério 27 de Março de 2025" width="100%" height="100%" />
                     </div>
                 </div>
 
                 <div class="fh5co-entry padding">
                     <h1 style="text-align: center; color: black">
-                        <strong>Programação Mês de Fevereiro de 2025</strong>
+                        <strong>Programação Mês de Abril de 2025</strong>
                     </h1>
                     <div>
-                        <img src="../assets/images/data/vm_06-02-2025.jpeg"
-                            alt="Reunião Vida e Ministério 06 de Fevereiro de 2025" width="100%" height="100%" />
+                        <img src="../assets/images/data/vm_03-04-2025.jpeg"
+                            alt="Reunião Vida e Ministério 03 de Abril de 2025" width="100%" height="100%" />
                     </div>
 
                     <div>
-                        <img src="../assets/images/data/vm_12-02-2025.jpeg"
-                            alt="Reunião Vida e Ministério 12 de Fevereiro de 2025" width="100%" height="100%" />
+                        <img src="../assets/images/data/vm_10-04-2025.jpeg"
+                            alt="Reunião Vida e Ministério 10 de Abril de 2025" width="100%" height="100%" />
                     </div>
 
                     <div>
-                        <img src="../assets/images/data/vm_20-02-2025.jpeg"
-                            alt="Reunião Vida e Ministério 20 de Fevereiro de 2025" width="100%" height="100%" />
+                        <img src="../assets/images/data/vm_17-04-2025.jpeg"
+                            alt="Reunião Vida e Ministério 17 de Abril de 2025" width="100%" height="100%" />
                     </div>
 
                     <div>
-                        <img src="../assets/images/data/vm_27-02-2025.jpeg"
-                            alt="Reunião Vida e Ministério 27 de Fevereiro de 2025" width="100%" height="100%" />
+                        <img src="../assets/images/data/vm_24-04-2025.jpeg"
+                            alt="Reunião Vida e Ministério 24 de Abril de 2025" width="100%" height="100%" />
+                    </div>
+                </div>
+
+                <div class="fh5co-entry padding">
+                    <h1 style="text-align: center; color: black">
+                        <strong>Programação Mês de Maio de 2025</strong>
+                    </h1>
+                    <div>
+                        <img src="../assets/images/data/vm_01-05-2025.jpeg"
+                            alt="Reunião Vida e Ministério 01 de Maio de 2025" width="100%" height="100%" />
                     </div>
                 </div>
             </div>
