fix: update tasks

--- a/pages/mecanicas.html
+++ b/pages/mecanicas.html
@@ -140,7 +140,7 @@
                                 <th scope="row">Quinta-feira - 06/03</th>
                                 <td>Elisio</td>
                                 <td>Vitor</td>
-                                <td>Adriano</td>
+                                <td>Everton</td>
                                 <td>Marcos</td>
                                 <td>Dielson</td>
                                 <td>Jonatan</td>
@@ -152,7 +152,7 @@
                                 <td>Dielson</td>
                                 <td>Claudemiro</td>
                                 <td>Vitor</td>
-                                <td>Adriano</td>
+                                <td>Pedro</td>
                             </tr>
                             <tr>
                                 <th scope="row">Quinta-feira - 13/03</th>
@@ -179,13 +179,13 @@
                                 <td>Jonatan</td>
                                 <td>Everton</td>
                                 <td>Claudemiro</td>
-                                <td>Adriano</td>
+                                <td>Raimundo</td>
                             </tr>
                             <tr>
                                 <th scope="row">Domingo - 23/03</th>
                                 <td>Claudemiro</td>
                                 <td>Pedro</td>
-                                <td>Adriano</td>
+                                <td>Vitor</td>
                                 <td>Raimundo</td>
                                 <td>Marcos</td>
                                 <td>Everton</td>
@@ -234,13 +234,13 @@
                                 <td>Claudemiro</td>
                                 <td>Vitor</td>
                                 <td>Everton</td>
-                                <td>Adriano</td>
+                                <td>Jonatan</td>
                             </tr>
                             <tr>
                                 <th scope="row">Domingo - 06/04</th>
                                 <td>Everton</td>
                                 <td>Pedro</td>
-                                <td>Adriano</td>
+                                <td>Marcos</td>
                                 <td>Dielson</td>
                                 <td>Raimundo</td>
                                 <td>Jonatan</td>
@@ -270,7 +270,7 @@
                                 <td>Marcos</td>
                                 <td>Raimundo</td>
                                 <td>Vitor</td>
-                                <td>Adriano</td>
+                                <td>Pedro</td>
                             </tr>
                             <tr>
                                 <th scope="row">Domingo - 20/04</th>
@@ -293,7 +293,7 @@
                             <tr>
                                 <th scope="row">Domingo - 27/04</th>
                                 <td>Everton</td>
-                                <td>Adriano</td>
+                                <td>Claudemiro</td>
                                 <td>Jonatan</td>
                                 <td>Raimundo</td>
                                 <td>Marcos</td>
