feat: added new group of service

--- a/pages/servicos.html
+++ b/pages/servicos.html
@@ -129,6 +129,7 @@
                                 <tr>
                                     <th scope="col">Grupo - 01</th>
                                     <th scope="col">Grupo - 02</th>
+                                    <th scope="col">Grupo - 03</th>
                                     <th scope="col">Função</th>
                                 </tr>
                             </thead>
@@ -136,91 +137,91 @@
                                 <tr>
                                     <td>Elísio Chagas</td>
                                     <td>Jonatas Braga</td>
+                                    <td>Paulo Henrique</td>
                                     <td>Superintendente do Grupo</td>
                                 </tr>
                                 <tr>
+                                    <td>Ernando Oliveira</td>
+                                    <td>Everton Santa Rosa</td>
                                     <td>José Raimundo</td>
-                                    <td>Mário N Júnior</td>
                                     <td>Ajudante do Grupo</td>
                                 </tr>
                                 <tr>
                                     <td>Nádia</td>
                                     <td>Ana Paula</td>
-                                    <td>Membro do Grupo</td>
-                                </tr>
-                                <tr>
-                                    <td>Almerita</td>
-                                    <td>Geo Estrela</td>
-                                    <td>Membro do Grupo</td>
-                                </tr>
-                                <tr>
-                                    <td>Claudemiro</td>
-                                    <td>Paulo Henrique</td>
-                                    <td>Membro do Grupo</td>
-                                </tr>
-                                <tr>
-                                    <td>Laíza</td>
                                     <td>Vânia</td>
                                     <td>Membro do Grupo</td>
                                 </tr>
                                 <tr>
-                                    <td>Vitor</td>
+                                    <td>Luciana</td>
+                                    <td>Stephane</td>
+                                    <td>Almerita</td>
+                                    <td>Membro do Grupo</td>
+                                </tr>
+                                <tr>
+                                    <td>Larissa</td>
                                     <td>Jonatan</td>
+                                    <td>Noelita</td>
+                                    <td>Membro do Grupo</td>
+                                </tr>
+                                <tr>
+                                    <td>Claudemiro</td>
+                                    <td>Mari</td>
+                                    <td>Rute</td>
+                                    <td>Membro do Grupo</td>
+                                </tr>
+                                <tr>
+                                    <td>Laiza</td>
+                                    <td>Maeve</td>
+                                    <td>Áurea</td>
+                                    <td>Membro do Grupo</td>
+                                </tr>
+                                <tr>
+                                    <td>Vitor</td>
+                                    <td>Mira</td>
+                                    <td>Valmita</td>
                                     <td>Membro do Grupo</td>
                                 </tr>
                                 <tr>
                                     <td>Pedro</td>
-                                    <td>Miraildes</td>
-                                    <td>Membro do Grupo</td>
-                                </tr>
-                                <tr>
-                                    <td>Josenildo</td>
-                                    <td>Dielson</td>
-                                    <td>Membro do Grupo</td>
-                                </tr>
-                                <tr>
-                                    <td>Selma</td>
-                                    <td>Adrielle</td>
-                                    <td>Membro do Grupo</td>
-                                </tr>
-                                <tr>
-                                    <td>Valmira</td>
-                                    <td>Stefane</td>
-                                    <td>Membro do Grupo</td>
-                                </tr>
-                                <tr>
-                                    <td>Áurea</td>
-                                    <td>Raquel</td>
+                                    <td>Iviny</td>
+                                    <td>Simone</td>
                                     <td>Membro do Grupo</td>
                                 </tr>
                                 <tr>
                                     <td>Geilza</td>
-                                    <td>Joyce</td>
-                                    <td>Membro do Grupo</td>
-                                </tr>
-                                <tr>
-                                    <td>Simone</td>
-                                    <td>Jacilma</td>
+                                    <td>Valentina</td>
+                                    <td>Josenildo</td>
                                     <td>Membro do Grupo</td>
                                 </tr>
                                 <tr>
                                     <td>Leandra</td>
-                                    <td>Paula Kawane</td>
+                                    <td>Marcos</td>
+                                    <td>Selma</td>
                                     <td>Membro do Grupo</td>
                                 </tr>
                                 <tr>
-                                    <td>Rodolfo</td>
+                                    <td>Joice</td>
+                                    <td>Naiara</td>
                                     <td>Renata</td>
                                     <td>Membro do Grupo</td>
                                 </tr>
                                 <tr>
-                                    <td>Zeni</td>
-                                    <td>Carol</td>
+                                    <td>Zenilza</td>
+                                    <td>Aylana</td>
+                                    <td>Raquel</td>
                                     <td>Membro do Grupo</td>
                                 </tr>
                                 <tr>
-                                    <td>Vitor</td>
-                                    <td>Iviny</td>
+                                    <td>Dielson</td>
+                                    <td>Carol</td>
+                                    <td>Geo</td>
+                                    <td>Membro do Grupo</td>
+                                </tr>
+                                <tr>
+                                    <td>Adrielle</td>
+                                    <td>Jacilma</td>
+                                    <td>Mário</td>
                                     <td>Membro do Grupo</td>
                                 </tr>
                             </tbody>
