update: programação do mês de maio de 2025

--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -95,7 +95,7 @@
 		</div>
 
 		<div id="fh5co-main-content">
-			<div class="fh5co-post">
+			<!-- <div class="fh5co-post">
 				<div class="fh5co-entry padding">
 					<div class="anuncios">
 						<h3><a name="congresso"><strong>Anúncio Sobre a Assembleia de Circuito</strong></a>
@@ -110,9 +110,9 @@
 								A</strong></p>
 					</div>
 				</div>
-			</div>
+			</div> -->
 
-			<div class="fh5co-post">
+			<!-- <div class="fh5co-post">
 				<div class="fh5co-entry padding">
 					<div class="anuncios">
 						<h3><a name="congresso"><strong>Anúncio Sobre a Reunião com os Pioneiros Regulares de
@@ -127,9 +127,9 @@
 								11:45h</strong></p>
 					</div>
 				</div>
-			</div>
+			</div> -->
 
-			<div class="fh5co-post">
+			<!-- <div class="fh5co-post">
 				<div class="fh5co-entry padding">
 					<div class="anuncios">
 						<h3><a name="visita"><strong>Anúncio Sobre a Visita do Superintendente de Circuito</strong></a>
@@ -142,7 +142,7 @@
 						<p>Casal Substituto - <strong>Edson e Manu</strong></p>
 					</div>
 				</div>
-			</div>
+			</div> -->
 
 			<div class="fh5co-post">
 				<div class="fh5co-entry padding">
@@ -153,8 +153,6 @@
 						<p style="padding-left: 40px;">Temos o prazer de informar as datas das duas próximas
 							Celebraçação da Morte de Cristo.</p>
 
-						<p>No ano de <strong>2025</strong> - A Celebração será realizada no <strong>Sábado, 12 de
-								Abril</strong></p>
 						<p>No ano de <strong>2026</strong> - A Celebração será realizada na <strong>Quinta-feira, 02 de
 								Abril</strong></p>
 						<p>No ano de <strong>2027</strong> - A Celebração será realizada na <strong>Segunda-feira, 22 de
