--- a/pages/servicos.html
+++ b/pages/servicos.html
@@ -154,7 +154,7 @@
                                 </tr>
                                 <tr>
                                     <td>Luciana</td>
-                                    <td>Stephane</td>
+                                    <td>Stefane</td>
                                     <td>Almerita</td>
                                     <td>Membro do Grupo</td>
                                 </tr>
@@ -179,7 +179,7 @@
                                 <tr>
                                     <td>Vitor</td>
                                     <td>Mira</td>
-                                    <td>Valmita</td>
+                                    <td>Valmira</td>
                                     <td>Membro do Grupo</td>
                                 </tr>
                                 <tr>
@@ -237,7 +237,7 @@
                     </h2>
 
                     <h4 style="text-align: center; color: black">
-                        <strong>De 06/03 até 09/03</strong>
+                        <strong>De 05/05 até 11/05</strong>
                     </h4>
                     <div>
                         <img src="../assets/images/data/carrinho1.png" alt="Semana 1 do Mês Atual" width="100%"
@@ -245,7 +245,7 @@
                     </div>
 
                     <h4 style="text-align: center; color: black">
-                        <strong>De 10/03 até 16/03</strong>
+                        <strong>De 12/05 até 18/05</strong>
                     </h4>
                     <div>
                         <img src="../assets/images/data/carrinho2.png" alt="Semana 2 do Mês Atual" width="100%"
@@ -253,7 +253,7 @@
                     </div>
 
                     <h4 style="text-align: center; color: black">
-                        <strong>De 17/03 até 23/03</strong>
+                        <strong>De 19/05 até 25/05</strong>
                     </h4>
                     <div>
                         <img src="../assets/images/data/carrinho3.png" alt="Semana 3 do Mês Atual" width="100%"
@@ -261,41 +261,7 @@
                     </div>
 
                     <h4 style="text-align: center; color: black">
-                        <strong>De 24/03 até 30/03</strong>
-                    </h4>
-                    <div>
-                        <img src="../assets/images/data/carrinho4.png" alt="Semana 4 do Mês Atual" width="100%"
-                            height="100%" />
-                    </div>
-
-
-                    <!--  -->
-                    <h4 style="text-align: center; color: black">
-                        <strong>De 31/03 até 06/04</strong>
-                    </h4>
-                    <div>
-                        <img src="../assets/images/data/carrinho1.png" alt="Semana 1 do Mês Atual" width="100%"
-                            height="100%" />
-                    </div>
-
-                    <h4 style="text-align: center; color: black">
-                        <strong>De 07/04 até 13/04</strong>
-                    </h4>
-                    <div>
-                        <img src="../assets/images/data/carrinho2.png" alt="Semana 2 do Mês Atual" width="100%"
-                            height="100%" />
-                    </div>
-
-                    <h4 style="text-align: center; color: black">
-                        <strong>De 14/04 até 20/04</strong>
-                    </h4>
-                    <div>
-                        <img src="../assets/images/data/carrinho3.png" alt="Semana 3 do Mês Atual" width="100%"
-                            height="100%" />
-                    </div>
-
-                    <h4 style="text-align: center; color: black">
-                        <strong>De 21/04 até 27/04</strong>
+                        <strong>De 26/05 até 01/06</strong>
                     </h4>
                     <div>
                         <img src="../assets/images/data/carrinho4.png" alt="Semana 4 do Mês Atual" width="100%"
