--- a/pages/mecanicas.html
+++ b/pages/mecanicas.html
@@ -112,7 +112,7 @@
                     </h2>
 
                     <h4 style="text-align: center; color: black">
-                        <strong>Mês de Março</strong>
+                        <strong>Mês de Maio</strong>
                     </h4>
                     <table class="table table-striped">
                         <thead class="thead-dark">
@@ -128,16 +128,16 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <th scope="row">Domingo - 02/03</th>
+                                <th scope="row">Domingo - 04/05</th>
                                 <td>Dielson</td>
                                 <td>Jonatan</td>
-                                <td>Raimundo</td>
+                                <td>Josenildo</td>
                                 <td>Vitor</td>
                                 <td>Claudemiro</td>
                                 <td>Pedro</td>
                             </tr>
                             <tr>
-                                <th scope="row">Quinta-feira - 06/03</th>
+                                <th scope="row">Quinta-feira - 08/05</th>
                                 <td>Elisio</td>
                                 <td>Vitor</td>
                                 <td>Everton</td>
@@ -146,7 +146,7 @@
                                 <td>Jonatan</td>
                             </tr>
                             <tr>
-                                <th scope="row">Domingo - 09/03</th>
+                                <th scope="row">Domingo - 11/05</th>
                                 <td>Everton</td>
                                 <td>Jonatan</td>
                                 <td>Dielson</td>
@@ -155,7 +155,7 @@
                                 <td>Pedro</td>
                             </tr>
                             <tr>
-                                <th scope="row">Quinta-feira - 13/03</th>
+                                <th scope="row">Quinta-feira - 15/05</th>
                                 <td>Claudemiro</td>
                                 <td>Pedro</td>
                                 <td>Marcos</td>
@@ -164,7 +164,7 @@
                                 <td>Jonatan</td>
                             </tr>
                             <tr>
-                                <th scope="row">Domingo - 16/03</th>
+                                <th scope="row">Domingo - 18/05</th>
                                 <td>Elísio</td>
                                 <td>Dielson</td>
                                 <td>Claudemiro</td>
@@ -173,8 +173,8 @@
                                 <td>Pedro</td>
                             </tr>
                             <tr>
-                                <th scope="row">Terça-feira (Visita do S.C.) - 18/03</th>
-                                <td>Dielson</td>
+                                <th scope="row">Quinta-feira - 22/05</th>
+                                <td>Josenildo</td>
                                 <td>Vitor</td>
                                 <td>Jonatan</td>
                                 <td>Everton</td>
@@ -182,7 +182,7 @@
                                 <td>Raimundo</td>
                             </tr>
                             <tr>
-                                <th scope="row">Domingo - 23/03</th>
+                                <th scope="row">Domingo - 25/05</th>
                                 <td>Claudemiro</td>
                                 <td>Pedro</td>
                                 <td>Vitor</td>
@@ -191,113 +191,13 @@
                                 <td>Everton</td>
                             </tr>
                             <tr>
-                                <th scope="row">Quinta-feira - 27/03</th>
+                                <th scope="row">Quinta-feira - 25/05</th>
                                 <td>Elísio</td>
-                                <td>Raimundo</td>
+                                <td>Josenildo</td>
                                 <td>Everton</td>
                                 <td>Claudemiro</td>
                                 <td>Vitor</td>
                                 <td>Jonatan</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Domingo- 30/03</th>
-                                <td>Vitor</td>
-                                <td>Jonatan</td>
-                                <td>Marcos</td>
-                                <td>Dielson</td>
-                                <td>Raimundo</td>
-                                <td>Pedro</td>
-                            </tr>
-                        </tbody>
-                    </table>
-
-                    <h4 style="text-align: center; color: black">
-                        <strong>Mês de Abril</strong>
-                    </h4>
-                    <table class="table table-striped">
-                        <thead class="thead-dark">
-                            <tr>
-                                <th scope="col">Data</th>
-                                <th scope="col">Palco</th>
-                                <th scope="col">Microfone 1</th>
-                                <th scope="col">Microfone 2</th>
-                                <th scope="col">Porta</th>
-                                <th scope="col">Frente</th>
-                                <th scope="col">Bebedouro</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <th scope="row">Quinta-feira - 03/04</th>
-                                <td>Dielson</td>
-                                <td>Raimundo</td>
-                                <td>Claudemiro</td>
-                                <td>Vitor</td>
-                                <td>Everton</td>
-                                <td>Jonatan</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Domingo - 06/04</th>
-                                <td>Everton</td>
-                                <td>Pedro</td>
-                                <td>Marcos</td>
-                                <td>Dielson</td>
-                                <td>Raimundo</td>
-                                <td>Jonatan</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Quinta-feira (Semana da Celebração) - 10/04</th>
-                                <td>Vitor</td>
-                                <td>Claudemiro</td>
-                                <td>Jonatan</td>
-                                <td>Raimundo</td>
-                                <td>Marcos</td>
-                                <td>Pedro</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Domingo (Semana da Celebração) - 13/04</th>
-                                <td>Elísio</td>
-                                <td>Raimundo</td>
-                                <td>Jonatan</td>
-                                <td>Dielson</td>
-                                <td>Everton</td>
-                                <td>Marcos</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Quinta-feira - 17/04</th>
-                                <td>Elísio</td>
-                                <td>Dielson</td>
-                                <td>Marcos</td>
-                                <td>Raimundo</td>
-                                <td>Vitor</td>
-                                <td>Pedro</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Domingo - 20/04</th>
-                                <td>Marcos</td>
-                                <td>Vitor</td>
-                                <td>Dielson</td>
-                                <td>Everton</td>
-                                <td>Claudemiro</td>
-                                <td>Pedro</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Quinta-feira - 24/04</th>
-                                <td>Elísio</td>
-                                <td>Dielson</td>
-                                <td>Pedro</td>
-                                <td>Vitor</td>
-                                <td>Everton</td>
-                                <td>Claudemiro</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">Domingo - 27/04</th>
-                                <td>Everton</td>
-                                <td>Claudemiro</td>
-                                <td>Jonatan</td>
-                                <td>Raimundo</td>
-                                <td>Marcos</td>
-                                <td>Dielson</td>
                             </tr>
                         </tbody>
                     </table>
@@ -310,7 +210,7 @@
                     </h2>
 
                     <h4 style="text-align: center; color: black">
-                        <strong>Mês de Março</strong>
+                        <strong>Mês de Maio</strong>
                     </h4>
                     <table class="table table-striped">
                         <thead class="thead-dark">
@@ -322,63 +222,23 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <th scope="row">02/03</th>
-                                <td>Paulo Henrique</td>
-                                <td>Everson Santa Rosa</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">09/03</th>
-                                <td>Claudemiro Carvalho</td>
+                                <th scope="row">04/05</th>
+                                <td>Ernando Oliveira</td>
                                 <td>Josenildo Cruz</td>
                             </tr>
                             <tr>
-                                <th scope="row">16/03</th>
+                                <th scope="row">11/05</th>
                                 <td>Mário N Júnior</td>
-                                <td>Marcos Vitor</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">23/03</th>
-                                <td>Elísio Chagas</td>
-                                <td>Claudemiro Carvalho</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">30/03</th>
-                                <td>Dielson Pazr</td>
-                                <td>José Raimundo</td>
-                            </tr>
-                        </tbody>
-                    </table>
-
-                    <h4 style="text-align: center; color: black">
-                        <strong>Mês de Abril</strong>
-                    </h4>
-                    <table class="table table-striped">
-                        <thead class="thead-dark">
-                            <tr>
-                                <th scope="col">Data</th>
-                                <th scope="col">Presidente</th>
-                                <th scope="col">Leitor de A Sentinela</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <th scope="row">06/04</th>
-                                <td>Mário N Júnior</td>
-                                <td>Josenildo Cruz</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">13/04</th>
-                                <td>Elísio Chagas</td>
                                 <td>Everton Santa Rosa</td>
                             </tr>
                             <tr>
-                                <th scope="row">20/04</th>
+                                <th scope="row">18/05</th>
                                 <td>Paulo Henrique</td>
                                 <td>Claudemiro Carvalho</td>
                             </tr>
                             <tr>
-                                <th scope="row">27/04</th>
-                                <td>Claudemiro Carvalho</td>
+                                <th scope="row">25/05</th>
+                                <td>Elísio Chagas</td>
                                 <td>Marcos Vitor</td>
                             </tr>
                         </tbody>
