--- a/pages/vida_ministerio.html
+++ b/pages/vida_ministerio.html
@@ -106,56 +106,27 @@
 
                 <div class="fh5co-entry padding">
                     <h1 style="text-align: center; color: black">
-                        <strong>Programação Mês de Março de 2025</strong>
-                    </h1>
-                    <div>
-                        <img src="../assets/images/data/vm_13-03-2025.jpeg"
-                            alt="Reunião Vida e Ministério 13 de Março de 2025" width="100%" height="100%" />
-                    </div>
-
-                    <div>
-                        <img src="../assets/images/data/vm_20-03-2025.jpeg"
-                            alt="Reunião Vida e Ministério 20 de Março de 2025" width="100%" height="100%" />
-                    </div>
-
-                    <div>
-                        <img src="../assets/images/data/vm_27-03-2025.jpeg"
-                            alt="Reunião Vida e Ministério 27 de Março de 2025" width="100%" height="100%" />
-                    </div>
-                </div>
-
-                <div class="fh5co-entry padding">
-                    <h1 style="text-align: center; color: black">
-                        <strong>Programação Mês de Abril de 2025</strong>
-                    </h1>
-                    <div>
-                        <img src="../assets/images/data/vm_03-04-2025.jpeg"
-                            alt="Reunião Vida e Ministério 03 de Abril de 2025" width="100%" height="100%" />
-                    </div>
-
-                    <div>
-                        <img src="../assets/images/data/vm_10-04-2025.jpeg"
-                            alt="Reunião Vida e Ministério 10 de Abril de 2025" width="100%" height="100%" />
-                    </div>
-
-                    <div>
-                        <img src="../assets/images/data/vm_17-04-2025.jpeg"
-                            alt="Reunião Vida e Ministério 17 de Abril de 2025" width="100%" height="100%" />
-                    </div>
-
-                    <div>
-                        <img src="../assets/images/data/vm_24-04-2025.jpeg"
-                            alt="Reunião Vida e Ministério 24 de Abril de 2025" width="100%" height="100%" />
-                    </div>
-                </div>
-
-                <div class="fh5co-entry padding">
-                    <h1 style="text-align: center; color: black">
                         <strong>Programação Mês de Maio de 2025</strong>
                     </h1>
                     <div>
                         <img src="../assets/images/data/vm_01-05-2025.jpeg"
                             alt="Reunião Vida e Ministério 01 de Maio de 2025" width="100%" height="100%" />
+                    </div>
+                    <div>
+                        <img src="../assets/images/data/vm_08-05-2025.jpeg"
+                            alt="Reunião Vida e Ministério 08 de Maio de 2025" width="100%" height="100%" />
+                    </div>
+                    <div>
+                        <img src="../assets/images/data/vm_15-05-2025.jpeg"
+                            alt="Reunião Vida e Ministério 15 de Maio de 2025" width="100%" height="100%" />
+                    </div>
+                    <div>
+                        <img src="../assets/images/data/vm_22-05-2025.jpeg"
+                            alt="Reunião Vida e Ministério 22 de Maio de 2025" width="100%" height="100%" />
+                    </div>
+                    <div>
+                        <img src="../assets/images/data/vm_29-05-2025.jpeg"
+                            alt="Reunião Vida e Ministério 29 de Maio de 2025" width="100%" height="100%" />
                     </div>
                 </div>
             </div>
